force-app/main/default/objects/ucinn_ascendv2__Relationship_Map_Setting__mdt/ucinn_ascendv2__Relationship_Map_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Relationship Map Setting</label>
    <pluralLabel>Relationship Map Settings</pluralLabel>
</CustomObject>