force-app/main/default/objects/ucinn_ascendv2__Relationship_Map_Setting__mdt/fields/ucinn_ascendv2__Description__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Description__c</fullName>
    <description>Description for this configuration.</description>
    <inlineHelpText>Description for this configuration.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>