force-app/main/default/objects/ucinn_ascendv2__Relationship_Map_Setting__mdt/fields/ucinn_ascendv2__Host_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Host_Object_Name__c</fullName>
    <description>The object that would be hosting the relationship map. (I.E. Contact)</description>
    <inlineHelpText>The object that would be hosting the relationship map. (I.E. Contact)</inlineHelpText>
    <label>Host Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>