force-app/main/default/objects/ucinn_ascendv2__Relationship_Map_Setting__mdt/fields/ucinn_ascendv2__Inferred_Max_Search_Depth__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Inferred_Max_Search_Depth__c</fullName>
    <description>Target depth level of Inferred Relationships to search for. Valid values are 2 or 3.</description>
    <inlineHelpText>Target depth level of Inferred Relationships to search for. Valid values are 2 or 3.</inlineHelpText>
    <label>Inferred Max Search Depth</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>