force-app/main/default/objects/ucinn_ascendv2__Relationship_Map_Setting__mdt/fields/ucinn_ascendv2__Initial_Render_Depth__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Initial_Render_Depth__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>This value determines the initial relationship depth to render when the relationship map is invoked. This assumes that the # of nodes rendered with just Level 1 does not exceed the Max Nodes to Render value.</inlineHelpText>
    <label>Initial Render Depth</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>