force-app/main/default/objects/ucinn_ascendv2__Relationship_Map_Setting__mdt/fields/ucinn_ascendv2__Initial_Render_Method__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Initial_Render_Method__c</fullName>
    <defaultValue>&quot;Method 3 - Max Nodes to Render&quot;</defaultValue>
    <inlineHelpText>Determines how the relationship map initially renders to the user. 
1: Renders the source node only.
2: Renders up to Initial Render Depth by default, with at most Max Nodes To Render nodes.
3: Renders all levels up to Max Nodes To Render nodes.</inlineHelpText>
    <label>Initial Render Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Method 1 - Level 0 Only</fullName>
            </value>
            <value>
                <fullName>Method 2 - Initial Render Depth</fullName>
            </value>
            <value>
                <fullName>Method 3 - Max Nodes to Render</fullName>
                <default>true</default>
                <label>Method 3 - Max Nodes to Render</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>