force-app/main/default/objects/ucinn_ascendv2__Relationship_Map_Setting__mdt/fields/ucinn_ascendv2__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to make this configuration active so that it can be used.</description>
    <inlineHelpText>Check this box to make this configuration active so that it can be used.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>