force-app/main/default/objects/ucinn_ascendv2__Relationship_Map_Setting__mdt/fields/ucinn_ascendv2__Max_Nodes_To_Render__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Max_Nodes_To_Render__c</fullName>
    <defaultValue>600</defaultValue>
    <inlineHelpText>This value determines the maximum number of relationships that the relationship will render before a filter is required. It does not limit the depth of the map to render.</inlineHelpText>
    <label>Max Nodes To Render</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>