force-app/main/default/objects/ucinn_ascendv2__Relationship_Map_Setting__mdt/fields/ucinn_ascendv2__On_Hover_Display_Fields__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__On_Hover_Display_Fields__c</fullName>
    <description>Configure fields to display on the relationship map node&apos;s hover-over display via JSON.</description>
    <inlineHelpText>Configure fields to display on the relationship map node&apos;s hover-over display via JSON.</inlineHelpText>
    <label>On Hover Display Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>