force-app/main/default/objects/ucinn_ascendv2__Relationship_Map_Setting__mdt/fields/ucinn_ascendv2__On_Hover_Display_Style__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__On_Hover_Display_Style__c</fullName>
    <description>Configure the pop-up box via this configuration</description>
    <inlineHelpText>Configure the pop-up box via this configuration</inlineHelpText>
    <label>On Hover Display Style</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>