force-app/main/default/objects/ucinn_ascendv2__Relationship_Map_Setting__mdt/fields/ucinn_ascendv2__Relationship_Map_Configuration__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Relationship_Map_Configuration__c</fullName>
    <description>Configuration for what the relationship map queries and how it handles different relationship types.</description>
    <inlineHelpText>Configuration for what the relationship map queries and how it handles different relationship types.</inlineHelpText>
    <label>Relationship Map Configuration</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>