force-app/main/default/objects/ucinn_ascendv2__Relationship_Map_Setting__mdt/fields/ucinn_ascendv2__Relationship_Map_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Relationship_Map_Display_Name__c</fullName>
    <description>Name to be displayed on the UI for this relationship map configuration.</description>
    <inlineHelpText>Name to be displayed on the UI for this relationship map configuration.</inlineHelpText>
    <label>Relationship Map Display Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>