force-app/main/default/objects/ucinn_ascendv2__Relationship_Map_Setting__mdt/fields/ucinn_ascendv2__Sankey_Graph_Relationship_JSON__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Sankey_Graph_Relationship_JSON__c</fullName>
    <description>Valid JSON configuration to control data displayed on Relationship Map&apos;s Sankey graph. This configuration does not affect other graph types, such as Tree and Node.</description>
    <inlineHelpText>Valid JSON configuration to control data displayed on Relationship Map&apos;s Sankey graph. This configuration does not affect other graph types, such as Tree and Node.</inlineHelpText>
    <label>Sankey Graph Relationship JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>