force-app/main/default/objects/ucinn_ascendv2__Relationship_Map_Setting__mdt/fields/ucinn_ascendv2__Target_Depth_Level__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Target_Depth_Level__c</fullName>
    <description>Maximum depth level of relationships to query, where the source is level 0.</description>
    <inlineHelpText>Target depth level of relationships to query, where the source is level 0.</inlineHelpText>
    <label>Maximum Depth Level</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>