force-app/main/default/objects/ucinn_ascendv2__Relationship_Map_Setting__mdt/validationRules/ucinn_ascendv2__Verify_Max_Nodes_To_Render.validationRule-meta.xml
<ValidationRule>
    <fullName>ucinn_ascendv2__Verify_Max_Nodes_To_Render</fullName>
    <active>true</active>
    <description>Max Nodes To Render must be &gt; 0</description>
    <errorConditionFormula>ucinn_ascendv2__Max_Nodes_To_Render__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>ucinn_ascendv2__Max_Nodes_To_Render__c</errorDisplayField>
    <errorMessage>Max Nodes to Render must be &gt; 0</errorMessage>
</ValidationRule>