force-app/main/default/objects/ucinn_ascendv2__Relationship_Map_Setting__mdt/validationRules/ucinn_ascendv2__Verify_Target_Depth_Level.validationRule-meta.xml
<ValidationRule>
    <fullName>ucinn_ascendv2__Verify_Target_Depth_Level</fullName>
    <active>true</active>
    <description>Maximum Depth Level must be 1-9 (inclusive).</description>
    <errorConditionFormula>OR( ucinn_ascendv2__Target_Depth_Level__c &lt; 1, ucinn_ascendv2__Target_Depth_Level__c &gt; 9)</errorConditionFormula>
    <errorDisplayField>ucinn_ascendv2__Target_Depth_Level__c</errorDisplayField>
    <errorMessage>Maximum Depth Level must be 1-9 (inclusive).</errorMessage>
</ValidationRule>